# grevm

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: grevm-test.yml
benches/: continuous.rs  continuous_blocks.rs  gigagas.rs  mainnet.rs
docs/: security-fix-checklist.md  testing.md  use-with-reth.md
docs/security/: 2026-02-26-security-audit-report.md  2026-03-02-security-audit-round2-report.md  2026-03-05-security-audit-round3-report.md
docs/v1/: README.md
docs/v2/: grevm2.1.md  grevm2.md
src/: async_commit.rs  cache_account.rs  hint.rs  lib.rs  parallel_state.rs  partition.rs  queue.rs  scheduler.rs  storage.rs  tx_dependency.rs  utils.rs
src/test_utils/: mod.rs
src/test_utils/common/: account.rs  execute.rs  mainnet.rs  mod.rs  storage.rs
src/test_utils/erc20/: erc20_contract.rs  mod.rs
src/test_utils/uniswap/: contract.rs  mod.rs
tests/: eip-7702.rs  erc20.rs  mainnet.rs  native_transfers.rs  uniswap.rs
tests/common/: compat.rs  execute.rs  mod.rs  storage.rs
tests/common/gravity/: block.sol.hex  consensus_config.sol.hex  genesis_accounts.json  genesis_contracts.json  reconfig.sol.hex  validator_set.sol.hex
tests/erc20/: erc20_contract.rs  main.rs  mod.rs
tests/ethereum/: main.rs
tests/uniswap/: contract.rs  mod.rs
