[package]
name = "grevm"
version = "0.1.0"
edition = "2024"
description = "Create Parallel EVM"
build = "build.rs"
license = "MIT OR Apache-2.0"

[dependencies]
revm = { package = "revm", git = "https://github.com/Galxe/revm", branch = "v27.0.3-gravity", default-features = false }
revm-database = { package = "revm-database", git = "https://github.com/Galxe/revm", branch = "v27.0.3-gravity", default-features = false }
revm-state = { package = "revm-state", git = "https://github.com/Galxe/revm", branch = "v27.0.3-gravity", default-features = false }
revm-primitives = { package = "revm-primitives", git = "https://github.com/Galxe/revm", branch = "v27.0.3-gravity", default-features = false }
revm-inspector = { package = "revm-inspector", git = "https://github.com/Galxe/revm", branch = "v27.0.3-gravity", default-features = false }
revm-context = { package = "revm-context", git = "https://github.com/Galxe/revm", branch = "v27.0.3-gravity", default-features = false }

ahash = "0.8"
rayon = "1.10.0"
atomic = "0.6.0"
parking_lot = "0.12"

# Alloy
alloy-evm = { package = "alloy-evm", git = "https://github.com/Galxe/alloy-evm", branch = "v0.15.0-gravity", default-features = false }

# async
futures = "0.3"
rand = "0.9"
auto_impl = "1.3"
lazy_static = "1.5.0"
dashmap = "6.0"

# metrics
metrics = "0.24"
metrics-derive = "0.1"

# test_utils
metrics-util = { version = "0.19.0", optional = true }

[dev-dependencies]
# revm-statetest-types = { package = "revm-statetest-types", git = "https://github.com/Galxe/revm", branch = "v27.0.3-gravity", default-features = false }
# revme = { package = "revme", git = "https://github.com/Galxe/revm", branch = "v27.0.3-gravity", default-features = false }
criterion = "0.5.1"
walkdir = "2.5.0"
rayon = "1.10.0"
tikv-jemallocator = "0.6"
bincode = "1.3.3"
serde_json = "1.0.94"

[lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.unreachable_pub = "warn"

[[bench]]
name = "gigagas"
harness = false

[profile.release]
codegen-units = 1
panic = "abort"
lto = "fat"

[profile.bench]
debug = 2
opt-level = 3
lto = "off"

[features]
test-utils = ["metrics-util"]
update-test-submodule = ["update-submodule-test-data", "update-submodule-ethereum-tests"]
update-submodule-test-data = []
update-submodule-ethereum-tests = []
