[package]
name = "grevm"
version = "2.2.2"
edition = "2024"
description = "Create Parallel EVM"
license = "MIT OR Apache-2.0"
# The fetcher binaries share `src/bin/rpc.rs`; disable bin auto-discovery so it isn't treated as
# its own binary target, and declare the real binaries explicitly below.
autobins = false

[dependencies]
# Upstream revm v29.0.1 (no fork). The miner reward is skipped during parallel execution via a
# custom `Handler` (see `scheduler::NoRewardHandler`) and self-computed at commit time, so the
# previous `Galxe/revm` fork (which only added a `lazy_reward` cfg flag + `ResultAndState` field)
# is no longer needed.
revm = { version = "29.0.1", default-features = false }
revm-database = { version = "7.0.5", default-features = false }
revm-state = { version = "7.0.5", default-features = false }
revm-primitives = { version = "20.2.1", default-features = false }
revm-inspector = { version = "10.0.1", default-features = false }
revm-context = { version = "9.1.0", default-features = false }

ahash = "0.8"
rayon = "1.10.0"
atomic = "0.6.0"
parking_lot = "0.12"

# Alloy — upstream (the `Galxe/alloy-evm` fork only repointed revm to the gravity fork and added a
# `..` to one `ResultAndState` destructure; both are unnecessary against upstream revm).
alloy-evm = { version = "0.21.3", default-features = false }

# async
futures = "0.3"
rand = "0.9"
auto_impl = "1.3"
lazy_static = "1.5.0"
dashmap = "6.0"

# logging
tracing = "0.1"

# metrics
metrics = "0.24"
metrics-derive = "0.1"

# test_utils
metrics-util = { version = "0.19.0", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1.0.94", optional = true }

# tools: lightweight blocking HTTP client for the mainnet JSON-RPC fetcher binaries. Optional and
# gated behind the `tools` feature so it never enters a normal library build.
ureq = { version = "2", features = ["json"], optional = true }

[dev-dependencies]
# revm-statetest-types = { package = "revm-statetest-types", git = "https://github.com/Galxe/revm", branch = "v29.0.1-gravity", default-features = false }
# revme = { package = "revme", git = "https://github.com/Galxe/revm", branch = "v29.0.1-gravity", default-features = false }
criterion = "0.5.1"
walkdir = "2.5.0"
rayon = "1.10.0"
tikv-jemallocator = "0.6"
bincode = "1.3.3"

[lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.unreachable_pub = "warn"

[[bench]]
name = "gigagas"
harness = false
# Uses `grevm::test_utils`; without the feature `cargo bench` would fail to compile rather than
# skip. Gate it so a plain `cargo bench` skips it cleanly.
required-features = ["test-utils"]

# Benchmarks grevm parallel vs revm sequential over the merged "big block" fixtures in
# `test_data/con_eth_blocks/`. Skips when no fixtures are present.
[[bench]]
name = "continuous"
harness = false
required-features = ["test-utils"]

# Single-block fetcher: downloads a block's execution environment via JSON-RPC
# (`debug_traceBlockByNumber` + `prestateTracer`) into `test_data/mainnet_blocks/<n>/`.
[[bin]]
name = "fetch_block"
path = "src/bin/fetch_block.rs"
required-features = ["tools"]

# Continuous-block fetcher: merges a range of blocks into one big block (filtering out txs that
# can't execute under the merged environment) into `test_data/con_eth_blocks/<range>/`.
[[bin]]
name = "fetch_continuous"
path = "src/bin/fetch_continuous.rs"
required-features = ["tools"]

# Pipelined replay: discover mainnet blocks over RPC (filtered, e.g. `all` or `eip-7702`) and
# replay each (parallel vs sequential), prefetching the next block while replaying the current one.
[[bin]]
name = "replay_mainnet"
path = "src/bin/replay_mainnet.rs"
required-features = ["tools"]

[profile.release]
codegen-units = 1
panic = "abort"
lto = "fat"

[profile.bench]
debug = 2
opt-level = 3
lto = "off"

[features]
test-utils = ["metrics-util", "dep:serde", "dep:serde_json", "revm-primitives/serde"]
# Mainnet fetcher binaries (`fetch_block`, `fetch_continuous`): pulls in the test-utils fixture
# schema plus a blocking HTTP client. Kept separate from `test-utils` so the test/bench path
# doesn't drag in `ureq`.
tools = ["test-utils", "dep:ureq"]
